Fixed some deprecated warnings (new Long to Long.valueOf), Whitespace changes